--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,12 @@
+:root{
+    --accent-color: #2196F3;
+    --primary-text-color: #212121;
+    --secondary-text-color: #757575;
+
+}
 body {
     font-family: 'Roboto', sans-serif;
+    color: var(--primary-text-color);
 }
 .link {
     text-decoration: none;
@@ -16,29 +23,32 @@ body {
     color: #000000;      
 }
 .logo-accent {
-    color: #2196F3;
+    color: var(--accent-color);
 }
 .nav-link {
     font-weight: 500;
     font-size: 14px;
     line-height: 1.14;
     letter-spacing: 0.02em;
-    color: #212121;
+    color: inherit;
 }
 .nav-link:hover,
 .nav-link:focus {
-    color: #2196F3;
+    color: var(--accent-color);
+}
+.current-page {
+    color: var(--accent-color);
 }
 .contacts-list-item{
     font-weight: 500;
     font-size: 14px;
     line-height: 1.14;
     letter-spacing: 0.02em;
-    color: #757575;
+    color: var(--secondary-text-color);
 }
 .contacts-list-item:hover,
 .contacts-list-item:focus {
-    color: #2196F3;
+    color: var(--accent-color);
 }
 .hero {
     background: #2F303A;;
@@ -60,10 +70,14 @@ body {
     text-align: center;
     letter-spacing: 0.06em;
     color: #FFFFFF;
-    background: #2196F3;
+    background-color: var(--accent-color);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
     cursor: pointer;
+}
+.main-btn:hover,
+.main-btn:focus{
+    background-color: #188CE8;
 }
 .advantages-subtitle {
     font-weight: 700;
@@ -71,16 +85,15 @@ body {
     line-height: 1.14;
     letter-spacing: 0.03em;
     text-transform: uppercase;
-    color: #212121;
 }
 .advantages-description {
     font-size: 14px;
     line-height: 1.71;
     letter-spacing: 0.03em;
-    color: #757575;
+    color: var(--secondary-text-color);
 }
 .team {
-    background: #F5F4FA;;
+    background-color: #F5F4FA;;
 }
 .subtitle {
     font-weight: 700;
@@ -88,12 +101,11 @@ body {
     line-height: 1.17;
     text-align: center;
     letter-spacing: 0.03em;
-    color: #212121;
 }
 .team-list-item {
     width: 270px;
     height: 368px;
-    background: #FFFFFF;
+    background-color: #FFFFFF;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
 }
@@ -103,18 +115,16 @@ body {
     line-height: 1.19;
     text-align: center;
     letter-spacing: 0.03em;
-    color: #212121;
 }
 .team-list-description {
     font-size: 16px;
     line-height: 1.19;
     text-align: center;
     letter-spacing: 0.03em;
-    color: #757575;
+    color: var(--secondary-text-color);
 }
 .footer {
     background: #2F303A;
-    ;
 }
 .footer-logo {
     color: #FFFFFF;
@@ -129,7 +139,7 @@ body {
 }
 .footer-address:hover,
 .footer-address:focus {
-    color: #2196F3;
+    color: var(--accent-color);
 }
 .address-list-item {
     font-style: normal;
@@ -140,6 +150,42 @@ body {
 }
 .address-list-item:hover,
 .address-list-item:focus {
-    color: #2196F3;
+    color: var(--accent-color);
 }
-
+.portfolio-btn {
+    font-family: 'Roboto';
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.63;
+    text-align: center;
+    letter-spacing: 0.03em;
+    color: inherit;
+    background-color: #F5F4FA;
+    border-radius: 4px;
+}
+.portfolio-btn:hover,
+.portfolio-btn:focus {
+    color: #FFFFFF;
+    background-color: var(--accent-color);
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+    cursor: pointer;
+}
+.portfolio-list-item {
+    width: 370px;
+    height: 404px;
+    background-color: #FFFFFF;
+    border: 1px solid #EEEEEE;
+}
+.portfolio-subtitle {
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 2;
+    letter-spacing: 0.06em;
+    color: var(--primary-text-color);
+}
+.portfolio-description {
+    font-size: 16px;
+    line-height: 1.88;
+    letter-spacing: 0.03em;
+    color: var(--secondary-text-color);
+}
