--- a/css/styles.css
+++ b/css/styles.css
@@ -4,9 +4,16 @@
     --secondary-text-color: #757575;
 
 }
+html {
+    box-sizing: border-box;
+}
+*, *::after, *::before {
+    box-sizing: inherit;
+}
 body {
     font-family: 'Roboto', sans-serif;
     color: var(--primary-text-color);
+    margin: 0;
 }
 .link {
     text-decoration: none;
